--- a/src/html-components/Header/styles.scss
+++ b/src/html-components/Header/styles.scss
@@ -9,7 +9,7 @@
     margin-top: -100px;
 
     img {
-      max-height: 100vh;
+      max-height: calc(100vh - 71px);
       width: 100%;
       object-fit: cover;
     }
@@ -27,6 +27,10 @@
     left: calc((100vw - 1500px) / 2);
     bottom: 174px;
     max-width: 818px;
+
+    @media screen and (max-width: 1570px) {
+      left: 35px;
+    }
 
     @media screen and (max-width: 1300px) {
       left: 70px;
