--- a/src/scss/Pages/Website-development/styles.scss
+++ b/src/scss/Pages/Website-development/styles.scss
@@ -8,7 +8,7 @@
   }
 
   .service-prising {
-    background-image: url('./../assets/treangle-bg.svg');
+    background-image: url("./../assets/treangle-bg.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
@@ -227,7 +227,6 @@
       }
 
       @media screen and (max-width: 768px) {
-
         img {
           width: 326px;
           height: 217px;
@@ -315,21 +314,30 @@
   .motivation {
     padding-top: 35px;
     padding-bottom: 40px;
+    letter-spacing: -0.02em;
+    color: #4f4f4f;
 
     &__subtitle {
-      margin-top: 30px;
-      margin-bottom: 40px;
       text-align: center;
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 27px;
+      text-align: center;
+
+      max-width: 829px;
+      margin: 30px auto 40px auto;
     }
 
     p {
       margin-bottom: 1rem;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
     }
 
     @media screen and (max-width: 768px) {
       &__subtitle {
-        margin-top: 18px;
-        margin-bottom: 18px;
+        margin: 18px auto;
         font-size: 16px;
         line-height: 20px;
       }
