--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -38,6 +38,11 @@ h2 {
 p {
   font-size: 18px;
   line-height: 17px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 
 a,
@@ -71,7 +76,7 @@ footer {
   @media screen and (max-width: 1023.99px) {
     max-width: 768px;
   }
-  
+
   @media screen and (max-width: 767.99px) {
     max-width: 100%;
     padding: 0 10px;
