--- a/src/html-components/Header/styles.scss
+++ b/src/html-components/Header/styles.scss
@@ -5,10 +5,12 @@
 
   &__bg-image {
     width: 100%;
+    height: 100vh;
     z-index: 0;
 
     img {
       width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
