--- a/src/html-components/SectionTitle/styles.scss
+++ b/src/html-components/SectionTitle/styles.scss
@@ -9,8 +9,23 @@
   -webkit-text-fill-color: transparent;
   line-height: 44px;
 
+  &.section-title_green {
+    background-image: linear-gradient(180deg, #389A77 19.27%, #175842 100%);;
+  }
+
+  &.section-title_blue {
+    background-image: linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%);
+  }
+
   span {
+    font-size: 36px;
+    line-height: 44px;
     margin-bottom: 17px;
+
+    @media screen and (max-width: 767.99px) {
+      font-size: 16px;
+      line-height: 20px;
+    }
   }
 
   hr {
@@ -18,6 +33,7 @@
     border: none;
     width: 100%;
     max-width: 270px;
+    background-color: #828282;
   }
 
   @media screen and (max-width: 1240px) {
@@ -42,3 +58,5 @@
     }
   }
 }
+
+
