--- a/src/scss/Pages/Website-development/styles.scss
+++ b/src/scss/Pages/Website-development/styles.scss
@@ -16,6 +16,7 @@
     padding-bottom: 50px;
 
     @media screen and (max-width: 1024px) {
+      background-image: none;
       padding-top: 15px;
       padding-bottom: 30px;
     }
