--- a/src/scss/Pages/Promotion/style.scss
+++ b/src/scss/Pages/Promotion/style.scss
@@ -3,14 +3,45 @@
 .promotion {
   padding-top: 40px;
 
+  @media screen and (max-width: 1224px) {
+    padding-top: 35px;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding-top: 10px;
+  }
+
   &__subtitle {
-    font-weight: 500;
-    font-size: 22px;
-    line-height: 27px;
-    letter-spacing: -0.02em;
     text-align: center;
     margin-top: 27px;
     margin-bottom: 60px;
+
+    p {
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 27px;
+      letter-spacing: -0.02em;
+
+      @media screen and (max-width: 1224px) {
+        font-size: 18px;
+        line-height: 17px;
+      }
+  
+      @media screen and (max-width: 768px) {
+        font-size: 14px;
+        line-height: 16px;
+      }
+    }
+
+    @media screen and (max-width: 1224px) {
+      margin-top: 17px;
+      margin-bottom: 0px;
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-top: 10px;
+      margin-bottom: 35px;
+    }
   }
   
   .scuba-diver-wrap {
