--- a/src/html-components/BlogCard/styles.scss
+++ b/src/html-components/BlogCard/styles.scss
@@ -8,6 +8,12 @@
   max-width: 503px;
   height: 479px;
 
+  &:hover {
+    img {
+      transform: scale(1.05);
+    }
+  }
+
   @media screen and (max-width: 1024px) {
     height: 467px;
   }
@@ -34,6 +40,7 @@
       object-fit: cover;
       width: 100%;
       height: 100%;
+      transition: all .2s;
     }
   }
 
