--- a/src/scss/Pages/Promotion/style.scss
+++ b/src/scss/Pages/Promotion/style.scss
@@ -24,18 +24,26 @@
 
       @media screen and (max-width: 1224px) {
         font-size: 18px;
-        line-height: 17px;
+        line-height: 22px;
+      }
+
+      @media screen and (max-width: 1024px) {
+        font-size: 16px;
+        line-height: 18px;
       }
   
       @media screen and (max-width: 768px) {
         font-size: 14px;
-        line-height: 16px;
+        line-height: 17px;
       }
+    }
+
+    @media screen and (max-width: 1440px) {
+      margin-bottom: 0px;
     }
 
     @media screen and (max-width: 1224px) {
       margin-top: 17px;
-      margin-bottom: 0px;
     }
 
     @media screen and (max-width: 768px) {
