--- a/src/html-components/Footer2/style.scss
+++ b/src/html-components/Footer2/style.scss
@@ -176,11 +176,22 @@
         font-size: 18px;
         line-height: 22px;
         color: $white;
-
         background: linear-gradient(180deg, #fac452 19.27%, #df51b0 100%);
         border: 2px solid #95edd0;
         box-sizing: border-box;
         border-radius: 10px;
+        transition: all 1s;
+
+        &:hover {
+          background: $white;
+
+          span {
+            font-weight: 500;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-image: linear-gradient(180deg, #fac452 19.27%, #df51b0 100%);
+          }
+        }
 
         @media screen and (max-width: 768px) {
           width: 143px;
@@ -188,6 +199,19 @@
           font-size: 16px;
           line-height: 20px;
         }
+      }
+    }
+  }
+
+  .request-call-btn {
+    transition: all 0.5s;
+    &:hover {
+      background: #FFFFFF;
+      span {
+        font-weight: 500;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-image: linear-gradient(180deg, #389A77 19.27%, #175842 100%);
       }
     }
   }
