--- a/src/html-components/Recomendation/styles.scss
+++ b/src/html-components/Recomendation/styles.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables';
+
 .recomendation {
   position: relative;
   margin-bottom: 68px;
@@ -197,8 +199,14 @@
 
         text-align: center;
         letter-spacing: -0.02em;
-
         color: #015fbf;
+        transition: all 0.5s;
+
+        &:hover {
+          background: linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%);
+          color: $white;
+        }
+
         @media screen and (max-width: 768px) {
           font-size: 18px;
           line-height: 22px;
