--- a/src/html-components/Footer/style.scss
+++ b/src/html-components/Footer/style.scss
@@ -256,6 +256,9 @@
   }
 
   .request-call-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     left: 0;
     bottom: 20px;
