--- a/src/html-components/Footer2/style.scss
+++ b/src/html-components/Footer2/style.scss
@@ -204,9 +204,12 @@
   }
 
   .request-call-btn {
+    background-image: linear-gradient(180deg, #389A77 19.27%, #175842 100%);
     transition: all 0.5s;
+
     &:hover {
       background: #FFFFFF;
+      
       span {
         font-weight: 500;
         -webkit-background-clip: text;
