--- a/src/html-components/BlogCard/styles.scss
+++ b/src/html-components/BlogCard/styles.scss
@@ -29,7 +29,7 @@
     overflow: hidden;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 11px;
+    margin-bottom: 1rem;
 
     @media screen and (max-width: 768px) {
       height: 235px;
@@ -47,7 +47,7 @@
   &__title {
     font-size: 22px;
     line-height: 27px;
-    margin-bottom: 37px;
+    margin-bottom: 26px;
     color: #12397C;
 
     @media screen and (max-width: 768px) {
@@ -59,8 +59,9 @@
 
   &__text {
     overflow: hidden;
-    height: 86px;
+    height: 72px;
     font-weight: 400;
+    line-height: 24px;
     letter-spacing: -0.02em;
     color: #4f4f4f;
     text-overflow: ellipsis;
