--- a/src/html-components/Header/styles.scss
+++ b/src/html-components/Header/styles.scss
@@ -3,6 +3,10 @@
 .header {
   position: relative;
 
+  .nav-menu {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 98%), transparent);
+  }
+
   &__bg-image {
     width: 100%;
     height: 100vh;
@@ -90,10 +94,11 @@
     @media screen and (max-width: 750px) {
       max-width: 360px;
       left: 10px;
-      max-width: 179px;
     }
 
-    @media screen and (max-width: 359.99px) {
+    @media screen and (max-width: 460.99px) {
+      max-width: 179px;
+      
       .title {
         font-size: 14px;
         line-height: 17px;
