--- a/src/html-components/SkillsTree/styles.scss
+++ b/src/html-components/SkillsTree/styles.scss
@@ -277,6 +277,7 @@
       font-size: 22px;
       line-height: 27px;
       letter-spacing: -0.02em;
+      color: $dark;
 
       @media screen and (max-width: 1440px) {
         font-size: 16px;
