--- a/src/html-components/Specialization/Items/styles.scss
+++ b/src/html-components/Specialization/Items/styles.scss
@@ -51,8 +51,6 @@
     padding-left: 36px;
     padding-right: 24px;
 
-    /* Gray 2 */
-
     color: #4f4f4f;
     margin-bottom: 31px;
   }
@@ -60,13 +58,8 @@
   &__link {
     font-size: 22px;
     line-height: 27px;
-    /* identical to box height */
-
     text-align: center;
     letter-spacing: -0.02em;
-
-    /* Gray 2 */
-
     color: #4f4f4f;
   }
 
@@ -98,7 +91,7 @@
     &__text {
       font-size: 14px;
       line-height: 17px;
-      height: 75px;
+      height: 7rem;
       padding: 0;
     }
 
