--- a/src/scss/popUp.scss
+++ b/src/scss/popUp.scss
@@ -3,31 +3,36 @@
 .pop-up {
   @keyframes showMessage {
     0%   { right: -100%; opacity: 1; }
-    35%  { right: 2.2rem; opacity: 1; }
-    55%  { right: 1.5rem; opacity: 1; }
+    10%  { right: 2rem; opacity: 1; }
+    55%  { right: 2rem; opacity: 1; }
     75%  { right: -50%; opacity: 0.6; }
     100% { right: -100%; opacity: 0; }
   }
+
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row-reverse;
   position: fixed;
   padding: 20px;
-  top: 1.5rem;
-  right: 1.5rem;
+  bottom: 1.8rem;
+  right: 2rem;
   box-shadow: 7px 11px 20px -15px;
   opacity: 1;
   border-radius: 10px;
-  max-width: 320px;
+  max-width: 380px;
   width: 100%;
-  height: 90px;
-  background: $white;
+  height: 112px;
+  font-size: 1.3rem;
+  background: #fff;
+  color: #4f4f4f;
+  z-index: 9999;
   animation-name: showMessage;
-  animation-duration: 5.5s;
+  animation-duration: 4s;
 
   img {
     width: 50px;
     height: 50px;
-    margin: 0 20px 0 0;
+    margin: 0 0 0 20px;
   }
 }
