--- a/src/html-components/BlogItem/styles.scss
+++ b/src/html-components/BlogItem/styles.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   margin-bottom: 46px;
 
-  ul {
+  ul, ol {
     padding-left: 1.2em;
     font-weight: 500;
     font-size: 22px;
